recorder app ci corrections are done